add background-image in less

--- a/less/global.less
+++ b/less/global.less
@@ -1,9 +1,18 @@
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   background-color: pink;
 }
 
 #app {
-  color: red;
-  font-size: 300px;
-  text-align: center;
+  height: 100%;
+  color: #fff;
+  font-size: 330px;
+  text-align: right;
+  background-image: url('../img/home.jpg');
+  background-repeat: no-repeat;
+  background-size: 50%;
 }
